[gd_scene load_steps=3 format=3 uid="uid://bw2tomnsl7yqy"]

[ext_resource type="Texture2D" uid="uid://7jf73jluhtnd" path="res://textures/gui/logo.png" id="1_6k46t"]
[ext_resource type="Script" path="res://scripts/gui/main_menu.gd" id="1_mdpoy"]

[node name="menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mdpoy")

[node name="main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="logo" type="TextureRect" parent="main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -417.5
offset_top = -343.0
offset_right = 417.5
offset_bottom = -145.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6k46t")

[node name="button_start" type="Button" parent="main"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = -50.0
offset_right = 305.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 41
text = "Start"

[node name="button_continue" type="Button" parent="main"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = -50.0
offset_right = 305.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 41
text = "Continue"

[node name="button_options" type="Button" parent="main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = 68.0
offset_right = 305.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 41
text = "Options
"

[node name="button_quit" type="Button" parent="main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = 186.0
offset_right = 305.0
offset_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 41
text = "Quit"

[node name="warp" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="button_warehouse" type="Button" parent="warp"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = -50.0
offset_right = 305.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 41
text = "Warehouse"

[node name="button_hills" type="Button" parent="warp"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = 82.0
offset_right = 305.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 41
text = "Hills
"

[node name="button_return" type="Button" parent="warp"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = 214.0
offset_right = 305.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 41
text = "Return"

[node name="button_main_menu" type="Button" parent="warp"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = -176.0
offset_right = 305.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 41
text = "Main Menu
"

[node name="graphics" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="button_return" type="Button" parent="graphics"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = -50.0
offset_right = 305.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 41
text = "Return"

[node name="options" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="button_graphics" type="Button" parent="options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = -50.0
offset_right = 305.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 41
text = "Graphics"

[node name="button_warp" type="Button" parent="options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = 74.0
offset_right = 305.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 41
text = "Warp"

[node name="button_return" type="Button" parent="options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = 196.0
offset_right = 305.0
offset_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 41
text = "Return"

[connection signal="pressed" from="main/button_start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="main/button_continue" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="main/button_options" to="." method="_on_main_button_options_pressed"]
[connection signal="pressed" from="main/button_quit" to="." method="_on_button_quit_pressed"]
[connection signal="pressed" from="warp/button_warehouse" to="." method="_on_warp_button_warehouse_pressed"]
[connection signal="pressed" from="warp/button_hills" to="." method="_on_warp_button_hills_pressed"]
[connection signal="pressed" from="warp/button_return" to="." method="_on_warp_button_return_pressed"]
[connection signal="pressed" from="warp/button_main_menu" to="." method="_on_warp_button_main_menu_pressed"]
[connection signal="pressed" from="graphics/button_return" to="." method="_on_graphics_button_return_pressed"]
[connection signal="pressed" from="options/button_graphics" to="." method="_on_options_button_graphics_pressed"]
[connection signal="pressed" from="options/button_warp" to="." method="_on_button_warp_pressed"]
[connection signal="pressed" from="options/button_return" to="." method="_on_options_button_return_pressed"]
